# mdf-icc

./: CNAME  Makefile  README-DEPLOYMENT.md
.github/workflows/: deploy.yml
frontend/: generate_static.py  main.py  pyproject.toml
frontend/static/: style.css
frontend/static/css/: processus.css
frontend/templates/: base.html  faq.html  home.html  presentation.html
shared/: __init__.py  logging_config.py
