[tool.poetry]
name = "mdf-frontend"
version = "0.1.0"
description = "Frontend Flask pour le Ministère de la Famille"
authors = ["MDF Team <admin@mdf.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
jinja2 = "^3.1.2"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
wtforms = "^3.1.0"
flask-wtf = "^1.2.0"
itsdangerous = "^2.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-flask = "^1.3.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
